<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>com.hsshy</groupId>
	<artifactId>beam-parent</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<name>beam-parent</name>
	<packaging>pom</packaging> <!--重要 父级packageing为 pom-->

	<modules>
		<module>beam-admin</module><!--后台管理系统-->
		<module>beam-rest</module><!--api服务-->
		<module>beam-common</module><!--通用工具类-->
		<module>beam-web</module><!--通用实体、dao、service-->

	</modules>

	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>2.1.5.RELEASE</version>
	</parent>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
		<java.version>1.8</java.version>

		<spring.boot.data.redis.version>2.1.5.RELEASE</spring.boot.data.redis.version>

		<beam.common.version>0.0.1-SNAPSHOT</beam.common.version>
		<beam.web.version>0.0.1-SNAPSHOT</beam.web.version>

		<mybatis-plus.version>3.0-RC1</mybatis-plus.version>
		<mybatis-plus-boot-starter.version>3.0-RC1</mybatis-plus-boot-starter.version>

		<swagger.version>2.9.2</swagger.version>
		<fastjson.version>1.2.47</fastjson.version>
		<ehcache.core.version>2.6.11</ehcache.core.version>
		<zxing.version>3.2.1</zxing.version>
		<mysql-connector-java.version>8.0.11</mysql-connector-java.version>
		<commons-lang3.version>3.3.2</commons-lang3.version>
		<commons-io-version>2.5</commons-io-version>
		<jwt.version>0.9.0</jwt.version>
		<shiro.version>1.4.0</shiro.version>
		<ehcache.version>3.3.1</ehcache.version>
		<kaptcha.version>2.3.2</kaptcha.version>
		<quartz.version>2.3.0</quartz.version>
		<mp3spi-version>1.9.5.4</mp3spi-version>
		<qiniu-version>[7.2.0, 7.2.99]</qiniu-version>
		<aliyun.oss.version>2.5.0</aliyun.oss.version>
		<qcloud.cos.version>4.4</qcloud.cos.version>
		<lombok-version>1.16.12</lombok-version>
		<hibernate.validator.version>6.0.2.Final</hibernate.validator.version>
		<dubbo-version>0.2.0</dubbo-version>
		<email-version>1.3.3</email-version>
		<disruptor-version>3.4.1</disruptor-version>
		<redisson-version>3.5.0</redisson-version>

		<easyexcel-version>1.1.1</easyexcel-version>

	</properties>
	<dependencyManagement>

		<dependencies>

			<!-- 自定义通用模块 -->
			<dependency>
				<groupId>com.hsshy</groupId>
				<artifactId>beam-common</artifactId>
				<version>${beam.common.version}</version>
			</dependency>

			<!-- 自定义通用模块 -->
			<dependency>
				<groupId>com.hsshy</groupId>
				<artifactId>beam-web</artifactId>
				<version>${beam.web.version}</version>
			</dependency>

			<dependency>
				<groupId>org.hibernate.validator</groupId>
				<artifactId>hibernate-validator</artifactId>
				<version>${hibernate.validator.version}</version>
			</dependency>


			 <!--swagger-->
			<dependency>
				<groupId>io.springfox</groupId>
				<artifactId>springfox-swagger2</artifactId>
				<version>${swagger.version}</version>
			</dependency>
			<dependency>
				<groupId>io.springfox</groupId>
				<artifactId>springfox-swagger-ui</artifactId>
				<version>${swagger.version}</version>
			</dependency>

			<!-- fastjson -->
			<dependency>
				<groupId>com.alibaba</groupId>
				<artifactId>fastjson</artifactId>
				<version>${fastjson.version}</version>
			</dependency>

			<!-- ehcache -->
			<dependency>
				<groupId>org.ehcache</groupId>
				<artifactId>ehcache</artifactId>
				<version>${ehcache.version}</version>
			</dependency>

			<dependency>
				<groupId>net.sf.ehcache</groupId>
				<artifactId>ehcache-core</artifactId>
				<version>${ehcache.core.version}</version>
			</dependency>

			<!-- 二维码 使用时需在使用的模块中引入 -->
			<dependency>
				<groupId>com.google.zxing</groupId>
				<artifactId>core</artifactId>
				<version>${zxing.version}</version>
			</dependency>

			<!-- mysql连接 -->
			<dependency>
				<groupId>mysql</groupId>
				<artifactId>mysql-connector-java</artifactId>
				<version>${mysql-connector-java.version}</version>
			</dependency>




			<!-- mybatis-plus begin -->
			<dependency>
				<groupId>com.baomidou</groupId>
				<artifactId>mybatis-plus-boot-starter</artifactId>
				<version>${mybatis-plus-boot-starter.version}</version>
			</dependency>
			<!-- mybatis-plus end -->

			<!-- common-lang3 -->
			<dependency>
				<groupId>org.apache.commons</groupId>
				<artifactId>commons-lang3</artifactId>
				<version>${commons-lang3.version}</version>
			</dependency>

			<dependency>
				<groupId>commons-io</groupId>
				<artifactId>commons-io</artifactId>
				<version>${commons-io-version}</version>
			</dependency>

			<!-- java web token-->
			<dependency>
				<groupId>io.jsonwebtoken</groupId>
				<artifactId>jjwt</artifactId>
				<version>${jwt.version}</version>
			</dependency>



			<!--shiro依赖-->
			<dependency>
				<groupId>org.apache.shiro</groupId>
				<artifactId>shiro-core</artifactId>
				<version>${shiro.version}</version>
			</dependency>
			<dependency>
				<groupId>org.apache.shiro</groupId>
				<artifactId>shiro-spring</artifactId>
				<version>${shiro.version}</version>
			</dependency>
			<dependency>
				<groupId>org.apache.shiro</groupId>
				<artifactId>shiro-ehcache</artifactId>
				<version>${shiro.version}</version>
			</dependency>



			<!-- 验证码 -->
			<dependency>
				<groupId>com.github.penggle</groupId>
				<artifactId>kaptcha</artifactId>
				<version>${kaptcha.version}</version>
			</dependency>


			<!--redis-->
			<dependency>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-starter-data-redis</artifactId>
				<version>${spring.boot.data.redis.version}</version>
			</dependency>

			<!--定时任务quartz-->
			<dependency>
				<groupId>org.quartz-scheduler</groupId>
				<artifactId>quartz</artifactId>
				<version>${quartz.version}</version>
			</dependency>

			<!--MP3ToWav转化时需要用到-->
			<dependency>
				<groupId>com.googlecode.soundlibs</groupId>
				<artifactId>mp3spi</artifactId>
				<version>${mp3spi-version}</version>
			</dependency>

			<!-- 七牛 阿里 腾讯 -->
			<dependency>
				<groupId>com.qiniu</groupId>
				<artifactId>qiniu-java-sdk</artifactId>
				<version>${qiniu-version}</version>
			</dependency>
			<dependency>
				<groupId>com.aliyun.oss</groupId>
				<artifactId>aliyun-sdk-oss</artifactId>
				<version>${aliyun.oss.version}</version>
			</dependency>
			<dependency>
				<groupId>com.qcloud</groupId>
				<artifactId>cos_api</artifactId>
				<version>${qcloud.cos.version}</version>
				<exclusions>
					<exclusion>
						<groupId>org.slf4j</groupId>
						<artifactId>slf4j-log4j12</artifactId>
					</exclusion>
				</exclusions>
			</dependency>
			<!--七牛 阿里 腾讯-->


			<dependency>
				<groupId>org.projectlombok</groupId>
				<artifactId>lombok</artifactId>
				<version>${lombok-version}</version>
			</dependency>

			<!--dubbo-->
			<dependency>
				<groupId>com.alibaba.boot</groupId>
				<artifactId>dubbo-spring-boot-starter</artifactId>
				<version>${dubbo-version}</version>
			</dependency>

			<dependency>
				<groupId>org.apache.commons</groupId>
				<artifactId>commons-email</artifactId>
				<version>${email-version}</version>
			</dependency>

			<!-- disruptor 高效队列-->
			<dependency>
				<groupId>com.lmax</groupId>
				<artifactId>disruptor</artifactId>
				<version>${disruptor-version}</version>
			</dependency>

			<dependency>
				<groupId>org.redisson</groupId>
				<artifactId>redisson</artifactId>
				<version>${redisson-version}</version>
			</dependency>

			<dependency>
				<groupId>com.alibaba</groupId>
				<artifactId>easyexcel</artifactId>
				<version>${easyexcel-version}</version>
			</dependency>


		</dependencies>

    </dependencyManagement>

	<build>
		<pluginManagement>
			<plugins>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-compiler-plugin</artifactId>
					<version>3.1</version>
					<configuration>
						<source>${java.version}</source>
						<target>${java.version}</target>
					</configuration>
				</plugin>
				<plugin>
					<groupId>org.springframework.boot</groupId>
					<artifactId>spring-boot-maven-plugin</artifactId>
				</plugin>
			</plugins>
		</pluginManagement>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-resources-plugin</artifactId>
				<configuration>
					<delimiters>
						<delimiter>@</delimiter> <!-- 替换符 -->
					</delimiters>
					<useDefaultDelimiters>false</useDefaultDelimiters>
				</configuration>
			</plugin>

		</plugins>

		<resources>
			<resource>
				<directory>src/main/resources</directory>
				<filtering>true</filtering>
			</resource>
			<resource>
				<directory>src/main/java</directory>
				<includes>
					<include>**/*.xml</include>
				</includes>
			</resource>
		</resources>
	</build>

	<profiles>
		<profile>
			<id>local</id>
			<properties>
				<spring.active>local</spring.active>
			</properties>
			<activation>
				<activeByDefault>true</activeByDefault>
			</activation>
		</profile>
		<profile>
			<id>dev</id>
			<properties>
				<spring.active>dev</spring.active>
			</properties>
		</profile>
		<profile>
			<id>test</id>
			<properties>
				<spring.active>test</spring.active>
			</properties>
		</profile>
		<profile>
			<id>produce</id>
			<properties>
				<spring.active>produce</spring.active>
			</properties>
		</profile>
	</profiles>


</project>
